--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,13 +4,223 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello MVC</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Home</title>
 </head>
 <body>
-    <h1>Hello MVC</h1>
-    <ul>
-        <li><a href="/admin">Admin home</a></li>
-        <li><a href="/admin/addUser">Add user in Admin controller</a></li>
-    </ul>
+    <div class="menu">
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light" >
+                <div class="container-fluid">
+                    <a class="navbar-brand" href='/'>ATN</a>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Link</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="nav-link disabled">Disabled</a>
+                            </li>
+                        </ul>
+                        <form class="container" style="display: flex; ">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="txtSearch">
+                            <button class="btn btn-outline-success" type="submit">Search</button>                  
+                        </form>
+                        <form class="d-flex" >
+                            <a class="nav-link" href="/login" style="color: black">Login </a>   
+                            <a class="nav-link" href="/register" style="color: black">Register</a>                     
+                        </form>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        
+        <div class="content">
+            <div class="container">
+                <div class="card">
+                    <dir class="row">
+                        <div class="col-sm-6 col-md-4">
+                            {{#each products}}     
+                                <div class="thumbnail">               
+                                    <img src="{{picURL}}" alt="" width="150" height="100" href="#" class="img-responsive">
+                                    <div class="card-body">
+                                    <h3 class="card-title">Product Detail</h3>
+                                    <p class="card-text">Product name: {{products.name}} </p>
+                                    <p class="card-text">Price: {{price}} </p>
+                                    <p class="card-text">Description </p>
+                                    <p class="card-text">{{description}}</p>
+                                    <a href="#" class="btn btn-success pull-right">Buy now</a>
+                                    </div> 
+                                </div>                
+                             {{/each}} 
+                         </div> 
+                         
+                         <div class="col-sm-6 col-md-4">
+                            {{#each products}}     
+                                <div class="thumbnail">               
+                                    <img src="{{picURL}}" alt="" width="150" height="100" href="#" class="img-responsive">
+                                    <div class="card-body">
+                                    <h3 class="card-title">Product Detail</h3>
+                                    <p class="card-text">Product name: {{name}} </p>
+                                    <p class="card-text">Price: {{price}} </p>
+                                    <p class="card-text">Description </p>
+                                    <p class="card-text">{{description}}</p>
+                                    <a href="#" class="btn btn-success pull-right">Buy now</a>
+                                    </div> 
+                                </div>                
+                             {{/each}} 
+                         </div> 
+
+                         <div class="col-sm-6 col-md-4">
+                            {{#each products}}     
+                                <div class="thumbnail">               
+                                    <img src="{{picURL}}" alt="" width="150" height="100" href="#" class="img-responsive">
+                                    <div class="card-body">
+                                    <h3 class="card-title">Product Detail</h3>
+                                    <p class="card-text">Product name: {{name}} </p>
+                                    <p class="card-text">Price: {{price}} </p>
+                                    <p class="card-text">Description </p>
+                                    <p class="card-text">{{description}}</p>
+                                    <a href="#" class="btn btn-success pull-right">Buy now</a>
+                                    </div> 
+                                </div>                
+                             {{/each}} 
+                         </div> 
+                    </dir>          
+                </div>
+
+                
+                
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination">
+                        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item"><a class="page-link" href="#">...</a></li>
+                        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                    </ul>
+                </nav>
+            </div>          
+        </div>
+    </div>
+    
+    <div class="footer">
+        <!-- Footer -->
+        <footer class="text-center text-lg-start bg-light text-muted">
+            <!-- Section: Social media -->
+            <section
+                class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
+            >
+                <!-- Left -->
+                <div class="me-5 d-none d-lg-block">
+                    <span>Get connected with us on social networks:</span>
+                </div>
+                <!-- Left -->
+
+                <!-- Right -->
+                <div>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-google"></i>
+                    </a>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div>
+                <!-- Right -->
+            </section>
+            <!-- Section: Social media -->
+
+            <!-- Section: Links  -->
+            <section class="">
+                <div class="container text-center text-md-start mt-5">
+                    <!-- Grid row -->
+                    <div class="row mt-3">
+                        <!-- Grid column -->
+                        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                        <!-- Content -->
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            <i class="fas fa-gem me-3"></i>Company name
+                        </h6>
+                        <p>
+                            Here you can use rows and columns to organize your footer content. Lorem ipsum
+                            dolor sit amet, consectetur adipisicing elit.
+                        </p>
+                        </div>
+
+                        <!-- Grid column -->
+                        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <!-- Links -->
+                            <h6 class="text-uppercase fw-bold mb-4">
+                                Useful links
+                            </h6>
+                            <p>
+                                <a href="#!" class="text-reset">Pricing</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">Settings</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">Orders</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">Help</a>
+                            </p>
+                        </div>
+                        <!-- Grid column -->
+
+                        <!-- Grid column -->
+                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                        <!-- Links -->
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            Contact
+                        </h6>
+                        <p><i class="fas fa-home me-3"></i> Hà Nội</p>
+                        <p>
+                            <i class="fas fa-envelope me-3"></i>
+                            ABC@example.com
+                        </p>
+                        <p><i class="fas fa-phone me-3"></i> + 01 234 567 89</p>
+                        <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+                        </div>
+                        <!-- Grid column -->
+                    </div>
+                    <!-- Grid row -->
+                </div>
+            </section>
+            <!-- Section: Links  -->
+
+            <!-- Copyright -->
+            <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+                © 2021 Copyright:
+                <a class="text-reset fw-bold" href="https://mdbootstrap.com/">Hello Word</a>
+            </div>
+        <!-- Copyright -->
+        </footer>
+        <!-- Footer -->
+    </div>
+    
+    
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    
+    
 </body>
 </html>
