--- a/views/login.hbs
+++ b/views/login.hbs
@@ -24,7 +24,7 @@
                     </div>
                     <div class="card-footer text-muted">
                         <a href="/" class="btn btn-success">Login</a>
-                        <div><a href="#" class="ForgetPwd">Forget Password?</a></div>                                             
+                        <div><a href="/register" class="ForgetPwd">Register</a> / <a href="#" class="ForgetPwd">Forget Password?</a></div>                                           
                     </div>
                     
                 </div>
