--- a/views/register.hbs
+++ b/views/register.hbs
@@ -27,7 +27,7 @@
                         </div> <!-- form-group end.// -->
                         
                     </div> <!-- form-row end.// -->
-                    <span style="color: red; ">{{errorD}}</span>
+                    <div style="text-align: right;"><span style="color: red ; ">{{errorD}}</span></div>
                     <div class="form-group">
                         <label>Email address</label>
                         <input required="true" type="email" class="form-control" placeholder="" name="txtEmail" value="{{oldValues.email}}">
