--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,24 +7,27 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Home</title>
+    <style>
+        
+    </style>
 </head>
-<body>
+<body style="background-color: #47e0d282;">
     <div class="menu">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light" >
                 <div class="container-fluid">
-                    <a class="navbar-brand" href='/'>ATN</a>
+                    <a class="navbar-brand" href='/'>BookStore</a>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
-                            <li class="nav-item">
+                            {{!-- <li class="nav-item">
                                 <a class="nav-link" href="#">Link</a>
-                            </li>
-                            <li class="nav-item">
+                            </li> --}}
+                            {{!-- <li class="nav-item">
                             <a class="nav-link disabled">Disabled</a>
-                            </li>
+                            </li> --}}
                         </ul>
                         <form class="container" style="display: flex; ">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="txtSearch">
@@ -38,8 +41,30 @@
                 </div>
             </nav>
         </div>
+
+            <div class="container"> 
+                <div class="Product">
+                    <div class="mt-4">
+                        <div class="row">
+                            {{#each products}}                   
+                                <div class="card" style="width: 15rem; background-color: rgba(236, 238, 93, 0.288)">
+                                    <img src="{{picURL}}" class="card-img-top" style="width: 10rem; height: 10rem; margin-left: 25px;" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">{{name}}</h5>
+                                    </div>
+                                    <div class="card-body">
+                                        <a href="#"><p class="card-text">Xem thêm</p></a>
+                                        {{!-- <p style="font-size: 20px;" class="card-text">Description </p>
+                                        <p class="card-text">{{description}}</p>   --}}
+                                    </div>
+                                </div>
+                            {{/each}}
+                        </div>
+                    </div>
+                </div>
+            </div>
         
-        <div class="content">
+        {{!-- <div class="content">
             <div class="container">
                 <div class="card">
                     <dir class="row">
@@ -56,10 +81,10 @@
                                     <a href="#" class="btn btn-success pull-right">Buy now</a>
                                     </div> 
                                 </div>                
-                             {{/each}} 
-                         </div> 
-                         
-                         <div class="col-sm-6 col-md-4">
+                            {{/each}} 
+                        </div> 
+                        
+                        <div class="col-sm-6 col-md-4">
                             {{#each products}}     
                                 <div class="thumbnail">               
                                     <img src="{{picURL}}" alt="" width="150" height="100" href="#" class="img-responsive">
@@ -72,10 +97,10 @@
                                     <a href="#" class="btn btn-success pull-right">Buy now</a>
                                     </div> 
                                 </div>                
-                             {{/each}} 
-                         </div> 
+                            {{/each}} 
+                        </div> 
 
-                         <div class="col-sm-6 col-md-4">
+                        <div class="col-sm-6 col-md-4">
                             {{#each products}}     
                                 <div class="thumbnail">               
                                     <img src="{{picURL}}" alt="" width="150" height="100" href="#" class="img-responsive">
@@ -88,8 +113,8 @@
                                     <a href="#" class="btn btn-success pull-right">Buy now</a>
                                     </div> 
                                 </div>                
-                             {{/each}} 
-                         </div> 
+                            {{/each}} 
+                        </div> 
                     </dir>          
                 </div>
 
@@ -106,10 +131,11 @@
                     </ul>
                 </nav>
             </div>          
-        </div>
+        </div> --}}
+
     </div>
     
-    <div class="footer">
+    <div class="footer" style="background: rgb(193, 245, 250);>
         <!-- Footer -->
         <footer class="text-center text-lg-start bg-light text-muted">
             <!-- Section: Social media -->
