--- a/views/index.hbs
+++ b/views/index.hbs
@@ -53,12 +53,20 @@
                                         <h5 class="card-title">{{name}}</h5>
                                     </div>
                                     <div class="card-body">
-                                        <a href="#"><p class="card-text">Xem thêm</p></a>
+                                        <a href="#"><p class="card-text">Mua Ngay</p></a>
                                         {{!-- <p style="font-size: 20px;" class="card-text">Description </p>
                                         <p class="card-text">{{description}}</p>   --}}
                                     </div>
+
+                                    <div class="card-body">
+                                        <a href="#"><p class="card-text">Thêm Thông Tin</p></a>
+                                    </div>
                                 </div>
                             {{/each}}
+                                <div class="card-body">
+                                        <a href="#"><p class="card-text">Xem Thêm</p></a>
+                                </div>
+
                         </div>
                     </div>
                 </div>
