--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,109 +7,74 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Home</title>
+    <style>
+        
+    </style>
 </head>
-<body>
+<body style="background-color: #47e0d282;">
     <div class="menu">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light" >
                 <div class="container-fluid">
-                    <a class="navbar-brand" href='/'>ATN</a>
+                    <a class="navbar-brand" href='/'>BookStore</a>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
-                            <li class="nav-item">
+                            {{!-- <li class="nav-item">
                                 <a class="nav-link" href="#">Link</a>
-                            </li>
-                            <li class="nav-item">
+                            </li> --}}
+                            {{!-- <li class="nav-item">
                             <a class="nav-link disabled">Disabled</a>
-                            </li>
+                            </li> --}}
                         </ul>
                         <form class="container" style="display: flex; ">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="txtSearch">
                             <button class="btn btn-outline-success" type="submit">Search</button>                  
                         </form>
-                        <form class="d-flex" >
-                            <a class="nav-link" href="/login" style="color: black">Login </a>   
-                            <a class="nav-link" href="/register" style="color: black">Register</a>                     
-                        </form>
+
+                        {{#if customerI}}
+                            welcome {{customerI.name}}</P>
+                        {{else}}
+                            <form class="d-flex" >
+                                <a class="nav-link" href="/login" style="color: black">Login </a>   
+                                <a class="nav-link" href="/register" style="color: black">Register</a>                     
+                            </form>
+                        {{/if}}
+                        
                     </div>
                 </div>
             </nav>
         </div>
-        
-        <div class="content">
-            <div class="container">
-                <div class="card">
-                    <dir class="row">
-                        <div class="col-sm-6 col-md-4">
-                            {{#each products}}     
-                                <div class="thumbnail">               
-                                    <img src="{{picURL}}" alt="" width="150" height="100" href="#" class="img-responsive">
+            
+            <div class="container"> 
+                <div class="Product">
+                    <div class="mt-4">
+                        <div class="row">
+                            {{#each products}}                   
+                                <div class="card" style="width: 15rem; background-color: rgba(236, 238, 93, 0.288)">
+                                    <img src="{{picURL}}" class="card-img-top" style="width: 10rem; height: 10rem; margin-left: 25px;" alt="...">
                                     <div class="card-body">
-                                    <h3 class="card-title">Product Detail</h3>
-                                    <p class="card-text">Product name: {{products.name}} </p>
-                                    <p class="card-text">Price: {{price}} </p>
-                                    <p class="card-text">Description </p>
-                                    <p class="card-text">{{description}}</p>
-                                    <a href="#" class="btn btn-success pull-right">Buy now</a>
-                                    </div> 
-                                </div>                
-                             {{/each}} 
-                         </div> 
-                         
-                         <div class="col-sm-6 col-md-4">
-                            {{#each products}}     
-                                <div class="thumbnail">               
-                                    <img src="{{picURL}}" alt="" width="150" height="100" href="#" class="img-responsive">
+                                        <h5 class="card-title">{{name}}</h5>
+                                    </div>
                                     <div class="card-body">
-                                    <h3 class="card-title">Product Detail</h3>
-                                    <p class="card-text">Product name: {{name}} </p>
-                                    <p class="card-text">Price: {{price}} </p>
-                                    <p class="card-text">Description </p>
-                                    <p class="card-text">{{description}}</p>
-                                    <a href="#" class="btn btn-success pull-right">Buy now</a>
-                                    </div> 
-                                </div>                
-                             {{/each}} 
-                         </div> 
-
-                         <div class="col-sm-6 col-md-4">
-                            {{#each products}}     
-                                <div class="thumbnail">               
-                                    <img src="{{picURL}}" alt="" width="150" height="100" href="#" class="img-responsive">
-                                    <div class="card-body">
-                                    <h3 class="card-title">Product Detail</h3>
-                                    <p class="card-text">Product name: {{name}} </p>
-                                    <p class="card-text">Price: {{price}} </p>
-                                    <p class="card-text">Description </p>
-                                    <p class="card-text">{{description}}</p>
-                                    <a href="#" class="btn btn-success pull-right">Buy now</a>
-                                    </div> 
-                                </div>                
-                             {{/each}} 
-                         </div> 
-                    </dir>          
+                                        <a href="#"><p class="card-text">Xem thêm</p></a>
+                                        {{!-- <p style="font-size: 20px;" class="card-text">Description </p>
+                                        <p class="card-text">{{description}}</p>   --}}
+                                    </div>
+                                </div>
+                            {{/each}}
+                        </div>
+                    </div>
                 </div>
+            </div>
+        
 
-                
-                
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination">
-                        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                        <li class="page-item"><a class="page-link" href="#">1</a></li>
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
-                        <li class="page-item"><a class="page-link" href="#">...</a></li>
-                        <li class="page-item"><a class="page-link" href="#">Next</a></li>
-                    </ul>
-                </nav>
-            </div>          
-        </div>
+
     </div>
     
-    <div class="footer">
+    <div class="footer" style="background: rgb(193, 245, 250);>
         <!-- Footer -->
         <footer class="text-center text-lg-start bg-light text-muted">
             <!-- Section: Social media -->
@@ -121,7 +86,6 @@
                     <span>Get connected with us on social networks:</span>
                 </div>
                 <!-- Left -->
-
                 <!-- Right -->
                 <div>
                     <a href="" class="me-4 text-reset">
@@ -146,7 +110,6 @@
                 <!-- Right -->
             </section>
             <!-- Section: Social media -->
-
             <!-- Section: Links  -->
             <section class="">
                 <div class="container text-center text-md-start mt-5">
@@ -163,7 +126,6 @@
                             dolor sit amet, consectetur adipisicing elit.
                         </p>
                         </div>
-
                         <!-- Grid column -->
                         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
                         <!-- Links -->
@@ -184,7 +146,6 @@
                             </p>
                         </div>
                         <!-- Grid column -->
-
                         <!-- Grid column -->
                         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                         <!-- Links -->
@@ -205,7 +166,6 @@
                 </div>
             </section>
             <!-- Section: Links  -->
-
             <!-- Copyright -->
             <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
                 © 2021 Copyright:
