--- a/views/index.hbs
+++ b/views/index.hbs
@@ -76,7 +76,7 @@
                                         <a href="allProduct" style="color: red; font-size: 1.5rem;"><p class="card-text">Xem Thêm Sản Phẩm</p></a>
                                 </div>
                                 </div>
-                            {{/each}}
+                            {{!-- {{/each}} --}}
                         </div>
                     </div>
                 </div>
