--- a/views/register.hbs
+++ b/views/register.hbs
@@ -23,16 +23,19 @@
                         </div> <!-- form-group end.// -->
                         <div class="col form-group">
                             <label>Phone number</label>
-                            <input required="true" type="text" class="form-control" placeholder=" " name="txtPhone" value="{{oldValues.phone}}">
+                            <input required="true" id = "phone" type="text" class="form-control" placeholder=" " name="txtPhone" value="{{oldValues.phone}}">
                         </div> <!-- form-group end.// -->
                         
                     </div> <!-- form-row end.// -->
                     <div style="text-align: right;"><span style="color: red ; ">{{errorD}}</span></div>
+                    <span style="color: red;">{{errorNa}}</span>
+                    <span style="color: red;">{{errorPhones}}</span>
                     <div class="form-group">
                         <label>Email address</label>
                         <input required="true" type="email" class="form-control" placeholder="" name="txtEmail" value="{{oldValues.email}}">
                         <small class="form-text text-muted">We'll never share your email with anyone else.</small>
                     </div> <!-- form-group end.// -->
+                    <span style="color: red ; ">{{errorE}}</span></div>
                     <div class="form-group" >
                             <label class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="txtGender" value="Male">
@@ -80,3 +83,21 @@
 </div> 
 <br><br>
 </article>
+
+<script type="text/javascript">
+$(document).ready(function() {
+    $('body').on('click','.btn-block', function() {
+    var vnf_regex = /((09|03|07|08|05)+([0-9]{8})\b)/g;
+    var phone = $('#phone').val();   
+    if (vnf_regex.test(phone) == false) 
+    {
+        alert('Số điện thoại của bạn không đúng định dạng!');
+        return;
+    }else{
+        alert('Số điện thoại của bạn hợp lệ!');
+        return;
+    }
+    
+    });
+});
+</script>
