--- a/views/editBooks.hbs
+++ b/views/editBooks.hbs
@@ -4,18 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Motor Store</title>
     <style>
-        h2{
-            color: aliceblue;
+        h1{
+            text-align: center;
+            color: aqua;
+        }
+        .container-fluid{
+            background-color: paleturquoise;
         }
         .form-group{
             color: aliceblue;
+
         }
     </style>
-    <title>Add New Book</title>
+    <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body style="background-image: url(https://img4.thuthuatphanmem.vn/uploads/2020/04/28/hinh-nen-4k-sieu-moto_025908041.jpg); background-size: cover;">
+
 <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light" >
                 <div class="container-fluid">
@@ -44,39 +51,33 @@
                 </div>
             </nav>
         </div>
-    <h2>New Product</h2>
-    <form action="/product" method="post">
+
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <h1>Edit Product</h1>
+</div>
+        <form action="/edit" method="post">
+                    <div class="panel-body">
+                <form action="/edit" method="post">
+					<input type="hidden" name="txtId" value="{{product._id}}">
+					
                     <div class="form-group">
+						
 					<label for="name">Name:</label>
-					<input required="true" type="text" class="form-control" name="txtName" value="{{oldValues.name}}">
+					<input required="true" type="text" class="form-control" name="txtName" value="{{product.name}}">
 					</div>
                     <div class="form-group">
                         <label for="price">Price:</label>
-                        <input  type="text" class="form-control" name="txtPrice" value="{{oldValues.price}}">
-                        <span style="color: red;">{{error}}</span> 
-					</div>     
+                        <input required="true" type="number" class="form-control" name="txtPrice" value="{{product.price}}">
+					</div>                  
                     <div class="form-group">
-                        <label for="category">Category:</label>
-                        <Select id="txtCategory" name="txtCategory">
-                        <option value="Do choi">Do choi</option>
-                        <option value="Dung cu hoc tap">Dung cu hoc tap</option>
-                        </Select>    
-                        {{!-- <input  type="text" class="form-control" name="txtCategory" value="{{oldValues.category}}"> --}}
-                        <span style="color: red;">{{error}}</span> 
-					</div>           
-
-
-                    <div class="form-group">
-					<label for="name">Picture URL:</label>
-					<input required="true" type="text" class="form-control" name="txtPicURL" value="{{oldValues.picURL}}"">
+                        <label for="name">Picture URL:</label>
+                        <input required="true" type="text" class="form-control" name="txtPicURL" value="{{product.picURL}}">
 					</div>
-                    <input type="submit" value="Insert" class = "btn btn-success">
-                    
-                    
+                    <input type="submit" value="Edit" class = "btn btn-success">
+            </form>
+            </div>
             </form>
     </form>
-    
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
 </body>
 </html>
