--- a/views/index.hbs
+++ b/views/index.hbs
@@ -64,10 +64,10 @@
                                         <a href="/inforProduct" style="color: rgb(29, 27, 27); font-size: 1.5rem;"><p class="card-text">{{name}}</p></a>
                                     </div>
                                     <div class="card-body">
-                                        <a href="#"><p class="card-text">Mua Ngay</p></a>
+                                        <a href="/inforProduct"><p class="card-text">xem thêm</p></a>
                                     </div>
                                     <div class="card-body">
-                                        <a href="#"><p class="card-text">Thêm Vào Giỏ Hàng</p></a>
+                                        <a href="Cart"><p class="card-text">Thêm Vào Giỏ Hàng</p></a>
                                     </div>
                                 </div>
                             {{/each}}
