--- a/views/login.hbs
+++ b/views/login.hbs
@@ -20,9 +20,9 @@
                     </div>
                     
                     <div class="card-body">
-                        <input type="text" id="userLName" class="form-control input-sm chat-input" placeholder="Email" name="txtLName"/>
+                        <input required="true" type="text" id="userLName" class="form-control input-sm chat-input" placeholder="Email" name="txtLName"/>
                         </br>
-                        <input type="password" id="userLPassword" class="form-control input-sm chat-input" placeholder="Password" name = "txtLPass"/>
+                        <input required="true" type="password" id="userLPassword" class="form-control input-sm chat-input" placeholder="Password" name = "txtLPass"/>
                     </div>
                     <div class="card-footer text-muted">
                         <input class="btn btn-primary" type="submit" value="Login">
