--- a/views/register.hbs
+++ b/views/register.hbs
@@ -84,7 +84,7 @@
 <br><br>
 </article>
 
-<script type="text/javascript">
+{{!-- <script type="text/javascript">
 $(document).ready(function() {
     $('body').on('click','.btn-block', function() {
     var vnf_regex = /((09|03|07|08|05)+([0-9]{8})\b)/g;
@@ -100,4 +100,4 @@ $(document).ready(function() {
     
     });
 });
-</script>
+</script> --}}
