--- a/views/updateProfile.hbs
+++ b/views/updateProfile.hbs
@@ -33,8 +33,7 @@
                             <button class="btn btn-outline-success" type="submit">Search</button>                  
                         </form>
                         <form class="d-flex" >
-                            <a class="nav-link" href="/login" style="color: black">Login </a>   
-                            <a class="nav-link" href="/register" style="color: black">Register</a>                     
+                            welcome {{customerI.name}}</P>             
                         </form>
                     </div>
                 </div>
@@ -44,7 +43,7 @@
     <div class="container">
         <div class="input-group input-group-sm mb-3">
             <span class="input-group-text" id="inputGroup-sizing-sm">First Name</span>
-            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" >
         </div>
         <div class="input-group input-group-sm mb-3">
             <span class="input-group-text" id="inputGroup-sizing-sm">Surname</span>
@@ -52,7 +51,7 @@
         </div>
         <div class="input-group input-group-sm mb-3">
             <span class="input-group-text" id="inputGroup-sizing-sm">Email address</span>
-            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" >
         </div>
         <div class="input-group input-group-sm mb-3">
             <span class="input-group-text" id="inputGroup-sizing-sm">Age</span>
