--- a/views/editBooks.hbs
+++ b/views/editBooks.hbs
@@ -54,7 +54,7 @@
 
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <h1>Edit Product</h1>
+    <h1>Edit Books</h1>
 </div>
         <form action="/edit" method="post">
                     <div class="panel-body">
