--- a/views/addBooks.hbs
+++ b/views/addBooks.hbs
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         h2{
-            color: aliceblue;
+            color: black;
         }
         .form-group{
-            color: aliceblue;
+            color: black;
         }
     </style>
     <title>Add New Book</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<body style="background-image: url(https://img4.thuthuatphanmem.vn/uploads/2020/04/28/hinh-nen-4k-sieu-moto_025908041.jpg); background-size: cover;">
+<body>
 <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light" >
                 <div class="container-fluid">
@@ -58,8 +58,8 @@
                     <div class="form-group">
                         <label for="category">Category:</label>
                         <Select id="txtCategory" name="txtCategory">
-                        <option value="Do choi">Do choi</option>
-                        <option value="Dung cu hoc tap">Dung cu hoc tap</option>
+                        <option value="Do choi">Toan Hoc</option>
+                        <option value="Dung cu hoc tap">Hoa Hoc</option>
                         </Select>    
                         {{!-- <input  type="text" class="form-control" name="txtCategory" value="{{oldValues.category}}"> --}}
                         <span style="color: red;">{{error}}</span> 
