--- a/views/editBooks.hbs
+++ b/views/editBooks.hbs
@@ -8,20 +8,20 @@
     <style>
         h1{
             text-align: center;
-            color: aqua;
+            color: black;
         }
         .container-fluid{
-            background-color: paleturquoise;
+            background-color: white;
         }
         .form-group{
-            color: aliceblue;
+            color: black;
 
         }
     </style>
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<body style="background-image: url(https://img4.thuthuatphanmem.vn/uploads/2020/04/28/hinh-nen-4k-sieu-moto_025908041.jpg); background-size: cover;">
+<body>
 
 <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light" >
