--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,7 @@
         
     </style>
 </head>
-<body style="background-color: #f3f3f382;">
+<body style="background-color: #c9dff182;">
     <div class="menu">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light" >
@@ -52,13 +52,11 @@
                             {{#each products}}                   
                                 <div class="card" style="width: 15rem; align-items: center; background-color: rgba(236, 238, 93, 0.288)">
                                     <img src="{{picURL}}" class="card-img-top" style="width: 10rem; height: 10rem;" alt="..."> 
-                                    {{!-- margin-left: 25px; --}}
                                     <div class="card-body">
-                                        {{!-- <h5 class="card-title">{{name}}</h5> --}}
                                         <a href="/inforProduct" style="color: rgb(29, 27, 27); font-size: 1.5rem;"><p class="card-text">{{name}}</p></a>
                                     </div>
                                     <div class="card-body">
-                                        <a href="/inforProduct"><p class="card-text">xem thêm</p></a>
+                                        <a href="/inforProduct"><p class="card-text">Mua Ngay</p></a>
                                     </div>
                                     <div class="card-body">
                                         <a href="Cart"><p class="card-text">Thêm Vào Giỏ Hàng</p></a>
@@ -69,7 +67,6 @@
                                         <a href="allProduct" style="color: red; font-size: 1.5rem;"><p class="card-text">Xem Thêm Sản Phẩm</p></a>
                                 </div>
                                 </div>
-                            {{!-- {{/each}} --}}
                         </div>
                     </div>
                 </div>
@@ -79,7 +76,7 @@
 
     </div>
     
-    <div class="footer" style="background: rgba(247, 250, 252, 0.007);>
+    <div class="footer" style="background: rgba(182, 226, 243, 0.856);>
         <!-- Footer -->
         <footer class="text-center text-lg-start bg-light text-muted">
             <!-- Section: Social media -->
