--- a/views/inforProduct.hbs
+++ b/views/inforProduct.hbs
@@ -7,6 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container"> 
+    <div class="Product">
+        <div class="descreption">
+            {{#each products}}
+            <div style="display: none;">{{_id}}</div>
+                    <div class="img-infor">
+                    <img src="{{picURL}}" class="card-img-top" style="width: 10rem; height: 10rem;" alt="...">
+                    </div>
+            <h2>Name: {{name}}</h2>
+            <p>Giá tiền: {{price}}</p>
+            <p>Nơi Sản xuất: </p>
+            {{/each}}
+        </div>
+    </div>
+</div>
 </body>
 </html>
