--- a/views/allProduct.hbs
+++ b/views/allProduct.hbs
@@ -11,7 +11,7 @@
         
     </style>
 </head>
-<body style="background-color: #47e0d282;">
+<body style="background-color: #c9dff182;">
     <div class="menu">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light" >
@@ -71,7 +71,7 @@
 
     </div>
     
-    <div class="footer" style="background: rgb(193, 245, 250);>
+    <div class="footer" style="background: rgba(182, 226, 243, 0.856);>
         <!-- Footer -->
         <footer class="text-center text-lg-start bg-light text-muted">
             <!-- Section: Social media -->
