--- a/views/index.hbs
+++ b/views/index.hbs
@@ -53,7 +53,7 @@
                                 <div class="card" style="width: 15rem; align-items: center; background-color: rgba(236, 238, 93, 0.288)">
                                     <img src="{{picURL}}" class="card-img-top" style="width: 10rem; height: 10rem;" alt="..."> 
                                     <div class="card-body">
-                                        <a href="/inforProduct" style="color: rgb(29, 27, 27); font-size: 1.5rem;"><p class="card-text">{{name}}</p></a>
+                                        <a href="/inforProduct?id={{_id}}" style="color: rgb(29, 27, 27); font-size: 1.5rem;"><p class="card-text">{{name}}</p></a>
                                     </div>
                                     <div class="card-body">
                                         <a href="/inforProduct"><p class="card-text">Mua Ngay</p></a>
