--- a/views/inforProduct.hbs
+++ b/views/inforProduct.hbs
@@ -11,7 +11,7 @@
     <div class="Product">
         <div class="descreption">
             {{#each products}}
-            <div style="display: none;">{{_id}}</div>
+            {{!-- <div style="display: none;">{{_id}}</div> --}}
                     <div class="img-infor">
                     <img src="{{picURL}}" class="card-img-top" style="width: 10rem; height: 10rem;" alt="...">
                     </div>
