--- a/views/view.hbs
+++ b/views/view.hbs
@@ -47,12 +47,12 @@
 			<a class="nav-link" href="/">Log out</a>
         </li>
 	</ul>
-    
+
     <h1>View all product</h1>  
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light" >
             <div class="container-fluid">     
-                <div style="text-align: right;"><a href="/insert" ><button class="btn btn-success" >Add</button></a> </div>     
+                <div style="text-align: right;"><a href="/addBooks" ><button class="btn btn-success" >Add</button></a> </div>     
                 <form class="d-flex ">                       
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="width: 190px" name="txtSearch"> 
 
@@ -100,10 +100,10 @@
 <script>
     function ConfirmDelete()
 {
-  var x = confirm("Are you sure you want to delete?");
-  if (x)
-      return true;
-  else
+    var x = confirm("Are you sure you want to delete?");
+    if (x)
+        return true;
+    else
     return false;
 }
 
