--- a/views/addBooks.hbs
+++ b/views/addBooks.hbs
@@ -1,85 +1,69 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        h2{
-            color: black;
-        }
-        .form-group{
-            color: black;
-        }
-    </style>
-    <title>Add New Book</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<title>Add product</title>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css?version=3">
+
+	<!-- jQuery library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+	<!-- Popper JS -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+	<!-- Latest compiled JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light" >
-                <div class="container-fluid">
-                    <a class="navbar-brand" href='/'>ATN</a>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/addBooks">Add</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/addBooks">Edit</a>
-                            </li>
-                            <li class="nav-item">
-                            <a class="nav-link disabled">Disabled</a>
-                            </li>
-                        </ul>
-                        <form class="container" style="display: flex; ">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="txtSearch">
-                            <button class="btn btn-outline-success" type="submit">Search</button>                  
-                        </form>
-                        <form class="d-flex" >
-                            <a class="nav-link" href="/login" style="color: black">Login </a>   
-                            <a class="nav-link" href="/register" style="color: black">Register</a>                     
-                        </form>
-                    </div>
-                </div>
-            </nav>
-        </div>
-    <h2>New Product</h2>
-    <form action="/product" method="post">
+    <ul class="nav nav-tabs">
+		<ul class="nav nav-tabs">
+		<li class="nav-item">
+			<a class="nav-link active" href="/view">View Product</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link " href="#">View User</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" href="#">View Order</a>
+		</li>
+		
+        <li class="nav-item">
+			<a class="nav-link" href="/">Log out</a>
+        </li>
+	</ul>
+		
+	</ul>
+    <div class="container">
+		<div class="panel panel-primary">
+			<div class="panel-heading">
+				<h2 class="text-center">Add Product</h2>
+			</div>
+			<div class="panel-body">
+                <form action="/product" method="post">
                     <div class="form-group">
-					<label for="name">Name:</label>
-					<input required="true" type="text" class="form-control" name="txtName" value="{{oldValues.name}}">
+						<label for="name">Name:</label>
+						<input required="true" type="text" class="form-control" name="txtName" value="{{oldValues.name}}">
 					</div>
                     <div class="form-group">
                         <label for="price">Price:</label>
+						{{!-- <input  type="number" class="form-control" name="txtPrice" value="{{oldValues.price}}"> --}}
                         <input  type="text" class="form-control" name="txtPrice" value="{{oldValues.price}}">
                         <span style="color: red;">{{error}}</span> 
-					</div>     
+					</div>                  
                     <div class="form-group">
-                        <label for="category">Category:</label>
-                        <Select id="txtCategory" name="txtCategory">
-                        <option value="Do choi">Toan Hoc</option>
-                        <option value="Dung cu hoc tap">Hoa Hoc</option>
-                        </Select>    
-                        {{!-- <input  type="text" class="form-control" name="txtCategory" value="{{oldValues.category}}"> --}}
-                        <span style="color: red;">{{error}}</span> 
-					</div>           
-
-
+					<label for="name">Description:</label>
+					<input required="true" type="text" class="form-control" name="txtDescription" value="{{oldValues.description}}">
+						{{!-- <input type="text" name="txtDescription" id="" value="{{oldValues.description}}"> --}}
+						<span style="color: red;">{{errorD}}</span> 
+					</div>
                     <div class="form-group">
 					<label for="name">Picture URL:</label>
 					<input required="true" type="text" class="form-control" name="txtPicURL" value="{{oldValues.picURL}}"">
 					</div>
                     <input type="submit" value="Insert" class = "btn btn-success">
-                    
-                    
             </form>
-    </form>
-    
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-</body>
+    </div>
+		</div>
+	</div>
 </html>
