--- a/views/editBooks.hbs
+++ b/views/editBooks.hbs
@@ -19,7 +19,7 @@
     <ul class="nav nav-tabs">
 		<ul class="nav nav-tabs">
 		<li class="nav-item">
-			<a class="nav-link active" href="/view">View Product</a>
+			<a class="nav-link active" href="view">View Product</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link " href="#">View User</a>
