--- a/views/addBooks.hbs
+++ b/views/addBooks.hbs
@@ -19,7 +19,7 @@
     <ul class="nav nav-tabs">
 		<ul class="nav nav-tabs">
 		<li class="nav-item">
-			<a class="nav-link active" href="/view">View Product</a>
+			<a class="nav-link active" href="view">View Product</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link " href="#">View User</a>
@@ -37,7 +37,7 @@
     <div class="container">
 		<div class="panel panel-primary">
 			<div class="panel-heading">
-				<h2 class="text-center">Add Product</h2>
+				<h2 class="text-center">Add Books</h2>
 			</div>
 			<div class="panel-body">
                 <form action="/product" method="post">
