--- a/views/index.hbs
+++ b/views/index.hbs
@@ -29,8 +29,15 @@
                         </form>
 
                         {{#if customerI}}
-                            welcome {{customerI.name}}</P>
-                            
+                            <div class="dropdown">
+                            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">welcome {{customerI.name}}
+                            <span class="caret"></span></button>
+                            <ul class="dropdown-menu">
+                                <li><a href="updateProfile">HTML</a></li>
+                                <li><a href="#">CSS</a></li>
+                                <li><a href="#">JavaScript</a></li>
+                            </ul>
+                            </div>
                         {{else}}
                             <form class="d-flex" >
                                 <a class="nav-link" href="/login" style="color: black">Login </a>   
