--- a/views/inforProduct.hbs
+++ b/views/inforProduct.hbs
@@ -10,17 +10,12 @@
     <div class="container"> 
     <div class="Product">
         <div class="descreption">
-<<<<<<< Updated upstream
-            {{!-- <div style="display: none;">{{_id}}</div> --}}
-=======
-            {{#each products}}
->>>>>>> Stashed changes
                     <div class="img-infor">
                     <img src="{{products.picURL}}" class="card-img-top" style="width: 10rem; height: 10rem;" alt="..."> 
                     </div>
             <h2>Name:  {{products.name}}</h2>
             <p>Giá tiền: {{products.price}}</p>
-            <p>Nơi Sản xuất: </p>
+            <p>Tác Giả: </p>
         </div>
         <div>
         </div>
