--- a/views/updateProfile.hbs
+++ b/views/updateProfile.hbs
@@ -15,7 +15,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light" >
                 <div class="container-fluid">
-                    <a class="navbar-brand" href='/'>ATN</a>
+                    <a class="navbar-brand" href='/'>BookStore</a>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
