--- a/views/addBooks.hbs
+++ b/views/addBooks.hbs
@@ -40,7 +40,7 @@
 				<h2 class="text-center">Add Books</h2>
 			</div>
 			<div class="panel-body">
-                <form action="/product" method="post">
+                <form action="addbook" method="post">
                     <div class="form-group">
 						<label for="name">Name:</label>
 						<input required="true" type="text" class="form-control" name="txtName" value="{{oldValues.name}}">
