--- a/views/view.hbs
+++ b/views/view.hbs
@@ -88,7 +88,7 @@
             <td>{{description}}</td>
             <td><img src="{{picURL}}" alt="" width="150" height="100"></td>
             <td><a href="editBooks?id={{_id}}">Edit</a></td>
-            <td><a onclick="ConfirmDelete()" href="/delete?id={{_id}}">Delete </a></td>
+            <td><a onclick="ConfirmDelete()" href="/admin/delete?id={{_id}}">Delete </a></td>
             
         {{/each}}
         </tr>
