--- a/views/editBooks.hbs
+++ b/views/editBooks.hbs
@@ -40,7 +40,7 @@
 				<h2 class="text-center">Edit Product</h2>
 			</div>
 			<div class="panel-body">
-                <form action="/edit" method="post">
+                <form action="/editBooks" method="post">
 					<input type="hidden" name="txtId" value="{{product._id}}">					
                     <div class="form-group">			
 				        <label for="name">Name:</label>
