--- a/views/inforProduct.hbs
+++ b/views/inforProduct.hbs
@@ -11,13 +11,14 @@
     <div class="Product">
         <div class="descreption">
                     <div class="img-infor">
-                    <img src="{{products.picURL}}" class="card-img-top" style="width: 10rem; height: 10rem;" alt="..."> 
+                        <img src="{{products.picURL}}" class="card-img-top" style="width: 250px; height: 300px;" alt="..."> 
                     </div>
-            <h2>Name:  {{products.name}}</h2>
-            <p>Giá tiền: {{products.price}}</p>
-            <p>Tác Giả: </p>
-        </div>
-        <div>
+            <div>
+                <h2>Name:  {{products.name}}</h2>
+                <p>Author: </p>
+                <p>Price: {{products.price}}</p>
+                <p>Description: {{products.description}}</p>
+            </div>
         </div>
     </div>
 </div>
