--- a/views/adminManagerOders.hbs
+++ b/views/adminManagerOders.hbs
@@ -64,7 +64,7 @@
         <img
           src="https://scontent.fhan3-3.fna.fbcdn.net/v/t39.30808-6/272949889_4884881758270187_4223559189825047220_n.jpg?_nc_cat=101&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=z3qEG7zrpGsAX-jCccv&_nc_ht=scontent.fhan3-3.fna&oh=00_AT8ymy9ctiPq51qt50coSf4dh0F4L-0c1hv67T1bXnF6Qw&oe=620BD2CC"
           alt="">
-        <span class="admin_name">Quân Trảu</span>
+        <span class="admin_name">Quân Lê</span>
         <i class='bx bx-chevron-down'></i>
       </div>
     </nav>
