--- a/views/adminManagerProduct.hbs
+++ b/views/adminManagerProduct.hbs
@@ -274,9 +274,9 @@
                 </span>
               </td>
               <td> <img src="" alt=""></td>
-              <td>Conana tap 1</td>
+              <td>Conan tap 1</td>
               <td>100$</td>
-              <td>chuyen tranh trinh tham</td>
+              <td>truyen tranh trinh tham</td>
               <td>
                 <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons"
                     data-toggle="tooltip" title="Edit">&#xE254;</i></a>
@@ -292,9 +292,9 @@
                 </span>
               </td>
               <td> <img src="" alt=""></td>
-              <td>Conana tap 1</td>
+              <td>Conan tap 2</td>
               <td>100$</td>
-              <td>chuyen tranh trinh tham</td>
+              <td>truyen tranh trinh tham</td>
               <td>
                 <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons"
                     data-toggle="tooltip" title="Edit">&#xE254;</i></a>
@@ -310,9 +310,9 @@
                 </span>
               </td>
               <td> <img src="" alt=""></td>
-              <td>Conana tap 1</td>
+              <td>Conan tap 3</td>
               <td>100$</td>
-              <td>chuyen tranh trinh tham</td>
+              <td>truyen tranh trinh tham</td>
               <td>
                 <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons"
                     data-toggle="tooltip" title="Edit">&#xE254;</i></a>
