--- a/views/orderDetail.hbs
+++ b/views/orderDetail.hbs
@@ -111,7 +111,7 @@
                             </td>
                             <td> 0000000000000001</td>
                             <td> <img src="" alt=""></td>
-                            <td>Conana tap 1</td>
+                            <td>Conan tap 1</td>
                             <td>Pending</td>
                             <td>Cancel</td>
 
@@ -125,7 +125,7 @@
                             </td>
                             <td> 0000000000000001</td>
                             <td> <img src="" alt=""></td>
-                            <td>Conana tap 1</td>
+                            <td>Conan tap 2</td>
                             <td>Pending</td>
                             <td>Cancel</td>
 
@@ -139,7 +139,7 @@
                             </td>
                             <td> 0000000000000001</td>
                             <td> <img src="" alt=""></td>
-                            <td>Conana tap 1</td>
+                            <td>Conan tap 3</td>
                             <td>Pending</td>
                             <td>Cancel</td>
 
