--- a/views/adminManagerCustomer.hbs
+++ b/views/adminManagerCustomer.hbs
@@ -273,9 +273,9 @@
                   <label for="checkbox1"></label>
                 </span>
               </td>
-              <td>Dany Lo</td>
-              <td>soengsouy@mail.com</td>
-              <td>89 Chiaroscuro Rd, Portland, Phnom Penh</td>
+              <td>Quan Le</td>
+              <td>quanlm@gmail.com</td>
+              <td>89 Đường Láng, Hà Nội</td>
               <td>0966686371</td>
               <td>
                 <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons"
@@ -291,9 +291,9 @@
                   <label for="checkbox2"></label>
                 </span>
               </td>
-              <td>Vivy Pay</td>
-              <td>soengsouy@mail.com</td>
-              <td>Obere Str. 57, Berlin, Battombang</td>
+              <td>Nam Đỗ</td>
+              <td>namdo123@gmail.com</td>
+              <td>57 Cầu Giấy, Hà Nội</td>
               <td>0966686372</td>
               <td>
                 <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons"
@@ -309,9 +309,9 @@
                   <label for="checkbox3"></label>
                 </span>
               </td>
-              <td>Design Web</td>
-              <td>camobida@mail.com</td>
-              <td>25, Joly, Paris, Takev</td>
+              <td>Nguyễn Kiên</td>
+              <td>kiennguyen123@gmail.com</td>
+              <td>25 Cầu Giấy</td>
               <td>0966686373</td>
               <td>
                 <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons"
@@ -345,9 +345,9 @@
                   <label for="checkbox5"></label>
                 </span>
               </td>
-              <td>Soeng Souy</td>
-              <td>soengsouy@mail.com</td>
-              <td>Via Monte Bianco 34, Turin, Pursat</td>
+              <td>Hữu Mạnh </td>
+              <td>huumanh123@gmail.com</td>
+              <td>155 Cầu Giấy</td>
               <td>0966686375</td>
               <td>
                 <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons"
