--- a/views/index.hbs
+++ b/views/index.hbs
@@ -41,7 +41,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="updateProfile">Edit Profile</a></li>
                             <li><a href="#">CSS</a></li>
-                            <li><a href="#">JavaScript</a></li>
+                            <li><a href="#">Log out</a></li>
                         </ul>
                         </div>
                         {{else}}
