--- a/views/loginAdmin.hbs
+++ b/views/loginAdmin.hbs
@@ -11,25 +11,27 @@
 </head>
 <body>
     <div class="container" style="padding-top: 160px;">
-        <div class="row">
-            <div class="col-md-4 offset-md-4">
-                <div class="card text-center card  bg-default mb-3">
-                    <div class="card-header">
-                        <h3>Admin Login</h3>
+        <form action="loginAdmin" method="post">
+            <div class="row">
+                <div class="col-md-4 offset-md-4">
+                    <div class="card text-center card  bg-default mb-3">
+                        <div class="card-header">
+                            <h3>Admin Login</h3>
+                        </div>
+                        <div class="card-body">
+                            <input type="text" id="userName" class="form-control input-sm chat-input" placeholder="Email" name="txtLEmailA"/>
+                            </br>
+                            <input type="password" id="userPassword" class="form-control input-sm chat-input" placeholder="Password" name="txtLPassA"/>
+                        </div>
+                        <div class="card-footer text-muted">
+                        <input class="btn btn-primary" type="submit" value="Login">
+                        <div><a href="#" class="ForgetPwd">Forget Password?</a></div>                                           
+                        </div>
+                        
                     </div>
-                    <div class="card-body">
-                        <input type="text" id="userName" class="form-control input-sm chat-input" placeholder="Username" />
-                        </br>
-                        <input type="password" id="userPassword" class="form-control input-sm chat-input" placeholder="Password" />
-                    </div>
-                    <div class="card-footer text-muted">
-                        <a href="/admin/view" class="btn btn-success">Login</a>
-                        <div><a href="#" class="ForgetPwd">Forget Password?</a></div>                                             
-                    </div>
-                    
                 </div>
             </div>
-        </div>
+        </form>
     </div>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
