--- a/views/addBooks.hbs
+++ b/views/addBooks.hbs
@@ -59,7 +59,7 @@
 					</div>
                     <div class="form-group">
 					<label for="name">Picture URL:</label>
-					<input required="true" type="text" class="form-control" name="txtPicURL" value="{{oldValues.picURL}}"">
+					<input required="true" type="text" class="form-control" name="txtPicURL" value="{{oldValues.picURL}}">
 					</div>
                     <input type="submit" value="Insert" class = "btn btn-success">
             </form>
