--- a/views/view.hbs
+++ b/views/view.hbs
@@ -76,6 +76,7 @@
             <th width='50px'>No</th>
             <th>Name </th>
             <th>Price</th>
+            <th>Author</th>
             <th>Description</th>
             <th width="150" >Image</th>
             <th width='80px'>Edit</th>
@@ -94,6 +95,7 @@
             
             <td> {{name}} </td>
             <td>{{price}} VND</td>
+            <td> {{author}} </td>
             <td>{{description}}</td>
             <td><img src="{{picURL}}" alt="" width="150" height="100"></td>
             <td><a href="editBooks?id={{_id}}">Edit</a></td>
