--- a/views/addBooks.hbs
+++ b/views/addBooks.hbs
@@ -50,7 +50,11 @@
 						{{!-- <input  type="number" class="form-control" name="txtPrice" value="{{oldValues.price}}"> --}}
                         <input  type="text" class="form-control" name="txtPrice" value="{{oldValues.price}}">
                         <span style="color: red;">{{error}}</span> 
-					</div>                  
+					</div> 
+					<div class="form-group">
+						<label for="name">Author:</label>
+						<input required="true" type="text" class="form-control" name="txtAuthor" value="{{oldValues.author}}">
+					</div>                 
                     <div class="form-group">
 					<label for="name">Description:</label>
 					<input required="true" type="text" class="form-control" name="txtDescription" value="{{oldValues.description}}">
