--- a/views/editBooks.hbs
+++ b/views/editBooks.hbs
@@ -49,7 +49,11 @@
                     <div class="form-group">
                         <label for="price">Price:</label>
                         <input required="true" type="number" class="form-control" name="txtPrice" value="{{product.price}}">
-					</div>                  
+					</div>      
+					<div class="form-group">			
+						<label for="name">Author:</label>
+						<input required="true" type="text" class="form-control" name="txtAuthor" value="{{product.author}}">
+					</div>            
                     <div class="form-group">
                         <label for="name">Description:</label>
                         <input required="true" type="text" class="form-control" name="txtDescription" value="{{product.description}}">
